Remove Company Name from Project

--- a/poc/metier/pom.xml
+++ b/poc/metier/pom.xml
@@ -9,7 +9,7 @@
         <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.desjardins.omatfat.poc</groupId>
+    <groupId>com.company.omatfat.poc</groupId>
     <artifactId>metier</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>metier</name>
