Infinite Loop fix to allow SonarQube Analysis and Tests coverage

--- a/poc/presentation/tsconfig.app.json
+++ b/poc/presentation/tsconfig.app.json
@@ -10,6 +10,14 @@
     "src/polyfills.ts"
   ],
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.component.ts",
+    "src/**/*.module.ts"
+  ],
+  "exclude": [
+    "src/**/test.ts",
+    "src/**/*.prod.ts",
+    "src/**/*.spec.ts"
   ]
 }
