--- a/poc/presentation/sonar-project.properties
+++ b/poc/presentation/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectKey=oma-fat-poc-presentation
 sonar.sources=src/
 sonar.sourceEncoding=UTF-8
 sonar.exclusions=**/node_modules/**
-#Important for SonarQube TS Analytics: add in tsconfig.app.json ==> "include": ["src/**/*"]
+#Important for SonarQube TS Analytics: add in tsconfig.app.json ==> "include" and "exclude"
 sonar.typescript.tsconfigPath=tsconfig.app.json
 
 #######################
