--- a/poc/interaction/sonar-project.properties
+++ b/poc/interaction/sonar-project.properties
@@ -5,11 +5,5 @@ sonar.java.binaries=target/classes
 sonar.sources=src/main/java
 sonar.sourceEncoding=UTF-8
 sonar.java.source=8
-
-#Others
-#sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-#sonar.junit.reportsPath=target/surefire-reports/TEST-*.xml
-#sonar.tests=src/test/java
-#sonar.exclusions=node_modules/**/*, reports/**/*
-#sonar.test.inclusions=**/*.test.js
+sonar.coverage.exclusions=**/*Dto.*,**/*Controller.*,**/InteractionApplication.*
 
