Code Coverage for front and backend

--- a/poc/metier/sonar-project.properties
+++ b/poc/metier/sonar-project.properties
@@ -5,12 +5,4 @@ sonar.java.binaries=target/classes
 sonar.sources=src/main/java
 sonar.sourceEncoding=UTF-8
 sonar.java.source=8
-
-#sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-#sonar.junit.reportsPath=target/surefire-reports/TEST-*.xml
-#sonar.tests=src/test/java
-
-#Others
-#sonar.exclusions=node_modules/**/*, reports/**/*
-#sonar.test.inclusions=**/*.test.js
-
+sonar.coverage.exclusions=**/*Entity.*,**/*Controller.*,**/MetierApplication.*
