--- a/poc/interaction/pom.xml
+++ b/poc/interaction/pom.xml
@@ -57,6 +57,11 @@
             <version>2.3.1.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
     <build>
